syntax = "proto3";
package wrdn.user.v1;
option go_package = "github.com/optclblast/biocom/pkg/proto/gen/warden/user/v1";

service UsersAPI {
        rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}

message GetUsersRequest {
        repeated string ids = 1;
        string organization_id = 2;
}

message GetUsersResponse {
        repeated User users = 1;
}

message User {
        string id = 1;
        string login = 2;
        string name = 3; 
        uint64 created_at = 4;
        uint64 updated_at = 5; 
        uint64 deleted_at = 6;
}